Wire up product and collage images with layout-shift prevention
- Update offer card images to root-relative /assets/ paths with
  width/height attributes (600x450) and descriptive alt text
- Update collage images to /assets/ paths with width/height attrs
- Reorder collage grid: 2 stacked left, 1 tall right on desktop
- Add aspect-ratio: auto to collage images for intrinsic sizing
- Improve mobile collage fallback (reset grid-column on small screens)
- Add /* Offer Section */ and /* About Collage */ CSS comments

--- a/index.html
+++ b/index.html
@@ -106,21 +106,21 @@
         <div class="offer-grid">
           <div class="offer-card reveal-fade">
             <div class="offer-img">
-              <img src="assets/step-rails.jpg" alt="Wrought iron step rails" loading="lazy" />
+              <img src="/assets/step-rails.jpg" alt="Wrought iron step rails installed on concrete steps" width="600" height="450" loading="lazy" />
             </div>
             <h3>Step Rails</h3>
             <p>Wrought Iron Step Rails Made To Order and Installed</p>
           </div>
           <div class="offer-card reveal-fade">
             <div class="offer-img">
-              <img src="assets/porch-railings.jpg" alt="Porch railings and columns" loading="lazy" />
+              <img src="/assets/porch-railings.jpg" alt="Wrought iron porch railings with supporting columns" width="600" height="450" loading="lazy" />
             </div>
             <h3>Porch Railings &amp; Columns</h3>
             <p>Full Porch Perimeter Railing With Supporting Columns</p>
           </div>
           <div class="offer-card reveal-fade">
             <div class="offer-img">
-              <img src="assets/interior-railing.jpg" alt="Interior iron railing" loading="lazy" />
+              <img src="/assets/interior-railing.jpg" alt="Custom built-to-spec interior iron railing" width="600" height="450" loading="lazy" />
             </div>
             <h3>Interior Railing</h3>
             <p>Built to spec interior Iron Railings</p>
@@ -135,9 +135,9 @@
         </div>
         <div class="about-split">
           <div class="about-collage reveal-fade">
-            <img src="assets/collage-1.jpg" alt="Metro Property Care project" class="collage-img collage-img--tall" loading="lazy" />
-            <img src="assets/collage-2.jpg" alt="Metro Property Care installation" class="collage-img" loading="lazy" />
-            <img src="assets/collage-3.jpg" alt="Metro Property Care product" class="collage-img" loading="lazy" />
+            <img src="/assets/collage-2.jpg" alt="Metro Property Care iron railing installation" class="collage-img" width="400" height="290" loading="lazy" />
+            <img src="/assets/collage-3.jpg" alt="Metro Property Care finished iron product" class="collage-img" width="400" height="290" loading="lazy" />
+            <img src="/assets/collage-1.jpg" alt="Metro Property Care wrought iron railing project" class="collage-img collage-img--tall" width="400" height="600" loading="lazy" />
           </div>
           <div class="about-copy reveal-fade">
             <p>
