chore: standardize image markup site-wide
- Add width/height to all logo <img> tags (splash + header) across all 7 pages
- Add class="img-responsive" to offer card images on homepage
- Add .img-responsive utility class to style.css

--- a/index.html
+++ b/index.html
@@ -64,13 +64,13 @@
   <body>
     <!-- Splash overlay -->
     <div id="splash-overlay" class="splash-overlay" aria-hidden="true">
-      <img src="assets/logo.png" alt="Metro Property Care logo" class="splash-logo" />
+      <img src="assets/logo.png" alt="Metro Property Care logo" class="splash-logo" width="2048" height="1365" />
     </div>
 
     <!-- Sticky header with logo, navigation, and CTA -->
     <header class="site-header" id="site-header">
       <div class="logo">
-        <img src="assets/logo.png" alt="Metro Property Care" />
+        <img src="assets/logo.png" alt="Metro Property Care" width="2048" height="1365" />
       </div>
       <button class="nav-toggle" type="button" aria-controls="primary-nav" aria-expanded="false">
         <span class="toggle-icon" aria-hidden="true"></span>
@@ -106,21 +106,21 @@
         <div class="offer-grid">
           <div class="offer-card reveal-fade">
             <div class="offer-img">
-              <img src="assets/step-rails.jpg" alt="Wrought iron step rails installed on concrete steps" width="600" height="450" loading="lazy" />
+              <img src="assets/step-rails.jpg" alt="Wrought iron step rails installed on concrete steps" class="img-responsive" width="600" height="450" loading="lazy" />
             </div>
             <h3>Step Rails</h3>
             <p>Wrought Iron Step Rails Made To Order and Installed</p>
           </div>
           <div class="offer-card reveal-fade">
             <div class="offer-img">
-              <img src="assets/porch-railings.jpg" alt="Wrought iron porch railings with supporting columns" width="600" height="450" loading="lazy" />
+              <img src="assets/porch-railings.jpg" alt="Wrought iron porch railings with supporting columns" class="img-responsive" width="600" height="450" loading="lazy" />
             </div>
             <h3>Porch Railings &amp; Columns</h3>
             <p>Full Porch Perimeter Railing With Supporting Columns</p>
           </div>
           <div class="offer-card reveal-fade">
             <div class="offer-img">
-              <img src="assets/interior-railing.jpg" alt="Custom built-to-spec interior iron railing" width="600" height="450" loading="lazy" />
+              <img src="assets/interior-railing.jpg" alt="Custom built-to-spec interior iron railing" class="img-responsive" width="600" height="450" loading="lazy" />
             </div>
             <h3>Interior Railing</h3>
             <p>Built to spec interior Iron Railings</p>
